--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,45 +1,79 @@
-$gray: #e8e8e8;
-$darkGray: #777777;
-body {
+@import "./headers.scss";
+@import "./cards.scss";
+@import "./colors.scss";
+@import "./typography.scss";
+@import "./buttons.scss";
+@import "./pagination.scss";
+$screen-sm: 576px;
+body,
+h1,
+h2,
+h3 {
   margin: 0;
+  a {
+    text-decoration: none;
+  }
 }
-
-header {
-  width: 100%;
+body {
+  font-size: 8px;
+  font-family: "Roboto", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+.container {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.users-list-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  @media screen and (min-width: 650px) and (max-width: 1023px) {
+    align-items: center;
+    flex-direction: row;
+    flex-flow: row wrap;
+  }
+
+  @media screen and (min-width: 1024px) {
+    align-items: center;
+    flex-direction: row;
+    flex-flow: row wrap;
+  }
+}
+.user-repos-page {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: $gray;
-
-  img {
-    padding: 6rem 0rem 6rem 0rem;
-    width: 30%;
-    height: 30%;
+  .wrapper {
+    width: 100%;
+    .user-info {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      img {
+        width: 26em;
+        height: 26em;
+        border-radius: 100%;
+        margin: 2em;
+        box-shadow: 0em 1em 0.4em rgba(0, 0, 0, 0.178);
+      }
+      .repos {
+        width: 100%;
+      }
+    }
   }
-}
-
-.user-card-container {
-  box-shadow: 0rem 0.35rem 0.7rem rgba(0, 0, 0, 0.274);
-  margin: 1rem 0rem 1rem 0rem;
-  padding: 3rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  h1 {
-    color: $darkGray;
-    font-size: 3rem;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: normal;
-  }
-  div {
-    display: flex;
-    align-items: center;
-  }
-  img {
-    width: 10rem;
-    height: 10rem;
-    border-radius: 10rem;
-    margin-right: 2rem;
+  @media screen and (min-width: 1024px) {
+    .wrapper {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      .user-info {
+        width: 20%;
+        margin-top: 5em;
+      }
+      .repos {
+        width: 80%;
+      }
+    }
   }
 }
