--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,7 @@
 @import "./typography.scss";
 @import "./buttons.scss";
 @import "./pagination.scss";
+@import "./preloaders.scss";
 $screen-sm: 576px;
 body,
 h1,
