--- a/src/sass/headers.scss
+++ b/src/sass/headers.scss
@@ -1,5 +1,6 @@
 header {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: lightgray;
@@ -7,6 +8,10 @@ header {
     padding: 2em 0em 2em 0em;
     max-width: 16em;
     max-height: 16em;
+  }
+  input {
+    margin: 1em;
+    padding: 0.4em;
   }
 }
 
