--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -51,9 +51,10 @@ body {
       display: flex;
       flex-direction: column;
       align-items: center;
+      margin-bottom: 5.4em;
       img {
-        width: 26em;
-        height: 26em;
+        width: 22em;
+        height: 22em;
         border-radius: 100%;
         margin: 2em;
         box-shadow: 0em 1em 0.4em rgba(0, 0, 0, 0.178);
