--- a/public/main.css
+++ b/public/main.css
@@ -1,34 +1,256 @@
-body {
-  margin: 0; }
-
 header {
-  width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #e8e8e8; }
+  background-color: lightgray; }
   header img {
-    padding: 6rem 0rem 6rem 0rem;
-    width: 30%;
-    height: 30%; }
+    padding: 2em 0em 2em 0em;
+    max-width: 16em;
+    max-height: 16em; }
+  header input {
+    margin: 1em;
+    padding: 0.4em; }
+
+.repos-header {
+  justify-content: space-between; }
+  .repos-header img {
+    padding: 1em 2em 1em 2em;
+    max-width: 6em;
+    max-height: 6em; }
+  .repos-header a {
+    padding: 1em 2em 1em 2em;
+    color: white;
+    font-size: 2em;
+    font-weight: normal;
+    text-decoration: none; }
 
 .user-card-container {
-  box-shadow: 0rem 0.35rem 0.7rem rgba(0, 0, 0, 0.274);
-  margin: 1rem 0rem 1rem 0rem;
-  padding: 3rem;
+  border-bottom: 0.06em solid #c7c7c7;
+  padding: 3em;
   display: flex;
   justify-content: space-between;
   align-items: center; }
-  .user-card-container h1 {
-    color: #777777;
-    font-size: 3rem;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: normal; }
   .user-card-container div {
     display: flex;
-    align-items: center; }
+    align-items: center;
+    justify-content: space-between; }
+    .user-card-container div .desc {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start; }
+      .user-card-container div .desc a {
+        text-decoration: none; }
   .user-card-container img {
-    width: 10rem;
-    height: 10rem;
-    border-radius: 10rem;
-    margin-right: 2rem; }
+    width: 10em;
+    height: 10em;
+    border-radius: 100%;
+    margin-right: 2em;
+    box-shadow: 0em 1em 0.4em rgba(0, 0, 0, 0.178); }
+  @media screen and (max-width: 400px) {
+    .user-card-container img {
+      display: none; } }
+  @media screen and (min-width: 650px) and (max-width: 1523px) {
+    .user-card-container {
+      margin: 1em;
+      width: 40%;
+      border: 0.06em solid #c7c7c7; } }
+  @media screen and (min-width: 1524px) {
+    .user-card-container {
+      margin: 1em;
+      width: 25%;
+      border: 0.06em solid #c7c7c7; } }
+
+.repo-card-container {
+  border-bottom: 0.06em solid #c7c7c7;
+  padding: 3em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  @media screen and (min-width: 1024px) {
+    .repo-card-container {
+      border-left: 0.06em solid #c7c7c7; } }
+  .repo-card-container div {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; }
+    .repo-card-container div .desc {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start; }
+      .repo-card-container div .desc a {
+        text-decoration: none; }
+    .repo-card-container div .details {
+      margin: 1em 0em 1em 0em; }
+      .repo-card-container div .details span {
+        margin-left: 1.5em;
+        margin-right: 1em;
+        width: 1em;
+        height: 1em;
+        border-radius: 100%;
+        background-color: #9b9b9b; }
+      .repo-card-container div .details :nth-child(3) {
+        background-color: #c9aa22; }
+      .repo-card-container div .details :nth-child(5) {
+        background-color: #303bdf; }
+
+h1 {
+  color: #393939;
+  font-size: 2.6em;
+  font-weight: bold; }
+
+h2 {
+  color: #9b9b9b;
+  font-size: 2em;
+  font-weight: normal; }
+
+h3 {
+  color: #393939;
+  font-size: 1.6em;
+  font-weight: normal;
+  margin: 0.5em; }
+
+.button {
+  align-self: center;
+  margin: 0.4em;
+  padding: 0.8em 1em 0.8em 1em;
+  border-radius: 10%;
+  font-size: 2em;
+  background-color: #8094f8;
+  box-shadow: 0em 0.4em 0.4em rgba(0, 0, 0, 0.178); }
+  .button a {
+    color: white;
+    text-align: center;
+    text-decoration: none; }
+
+.page-numbers {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  font-size: 1.6em;
+  padding: 0; }
+  .page-numbers .active {
+    background-color: #8094f8;
+    color: white;
+    cursor: pointer; }
+  .page-numbers li {
+    color: #393939;
+    padding: 1.1em;
+    margin: 0.2em;
+    background-color: white;
+    border-radius: 10%;
+    border: 0.2em solid #8094f8;
+    box-shadow: 0em 0.5em 0.4em rgba(0, 0, 0, 0.178);
+    cursor: pointer; }
+  .page-numbers li:hover {
+    background-color: #8094f8;
+    color: white;
+    cursor: pointer; }
+
+.user-card-container-preloader {
+  border-bottom: 0.06em solid #c7c7c7;
+  padding: 3em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 50px; }
+  .user-card-container-preloader div {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; }
+  .user-card-container-preloader span {
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    margin-right: 2em;
+    box-shadow: 0em 1em 0.4em rgba(0, 0, 0, 0.178); }
+  @media screen and (min-width: 650px) and (max-width: 1523px) {
+    .user-card-container-preloader {
+      margin: 1em;
+      width: 40%;
+      border: 0.06em solid #c7c7c7; } }
+  @media screen and (min-width: 1524px) {
+    .user-card-container-preloader {
+      margin: 1em;
+      width: 25%;
+      border: 0.06em solid #c7c7c7; } }
+
+body,
+h1,
+h2,
+h3 {
+  margin: 0; }
+  body a,
+  h1 a,
+  h2 a,
+  h3 a {
+    text-decoration: none; }
+
+body {
+  font-size: 8px;
+  font-family: "Roboto", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
+
+.users-list-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
+  @media screen and (min-width: 650px) and (max-width: 1023px) {
+    .users-list-page {
+      align-items: center;
+      flex-direction: row;
+      flex-flow: row wrap; } }
+  @media screen and (min-width: 1024px) {
+    .users-list-page {
+      align-items: center;
+      flex-direction: row;
+      flex-flow: row wrap; } }
+
+.user-repos-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+  .user-repos-page .wrapper {
+    width: 100%; }
+    .user-repos-page .wrapper .user-info {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 5.4em; }
+      .user-repos-page .wrapper .user-info img {
+        width: 22em;
+        height: 22em;
+        border-radius: 100%;
+        margin: 2em;
+        box-shadow: 0em 1em 0.4em rgba(0, 0, 0, 0.178); }
+      .user-repos-page .wrapper .user-info .repos {
+        width: 100%; }
+  @media screen and (min-width: 1024px) and (max-width: 1199px) {
+    .user-repos-page .wrapper {
+      width: 100%;
+      display: flex;
+      flex-direction: row; }
+      .user-repos-page .wrapper .user-info {
+        width: 20%;
+        margin-top: 5em; }
+        .user-repos-page .wrapper .user-info img {
+          width: 20em;
+          height: 20em; }
+      .user-repos-page .wrapper .repos {
+        width: 80%; } }
+  @media screen and (min-width: 1200px) {
+    .user-repos-page .wrapper {
+      width: 100%;
+      display: flex;
+      flex-direction: row; }
+      .user-repos-page .wrapper .user-info {
+        width: 20%;
+        margin-top: 5em; }
+      .user-repos-page .wrapper .repos {
+        width: 80%; } }
