--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -28,6 +28,12 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  .informer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 15em;
+  }
   @media screen and (min-width: 650px) and (max-width: 1023px) {
     align-items: center;
     flex-direction: row;
