--- a/src/sass/cards.scss
+++ b/src/sass/cards.scss
@@ -30,6 +30,13 @@
       display: none;
     }
   }
+  @media screen and (min-width: 650px) and (max-width: 1075px) {
+    align-items: flex-start;
+    flex-direction: column;
+    div {
+      margin: 1.5em 0em 1.5em 0em;
+    }
+  }
   @media screen and (min-width: 650px) and (max-width: 1523px) {
     margin: 1em;
     width: 40%;
