--- a/public/main.css
+++ b/public/main.css
@@ -4,7 +4,13 @@ header {
   justify-content: center;
   align-items: center;
   padding: 3em;
-  box-shadow: 0em 0.4em 0.4em rgba(0, 0, 0, 0.178); }
+  box-shadow: 0em 0.4em 0.4em rgba(0, 0, 0, 0.178);
+  background: #feffff;
+  background: -moz-linear-gradient(top, #feffff 0%, #d2ebf9 100%);
+  background: -webkit-linear-gradient(top, #feffff 0%, #d2ebf9 100%);
+  background: linear-gradient(to bottom, #feffff 0%, #d2ebf9 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#feffff", endColorstr="#d2ebf9", GradientType=0 );
+  /* IE6-9 */ }
   header .searchbox {
     display: flex;
     justify-content: center;
@@ -21,15 +27,20 @@ header {
     display: flex;
     justify-content: center;
     align-items: center; }
-  .repos-header a {
+  .repos-header .go-back {
+    align-self: flex-start;
     padding: 1em 2em 1em 2em;
     color: white;
     font-size: 2em;
     font-weight: normal;
-    text-decoration: none; }
+    text-decoration: none;
+    cursor: pointer; }
+    .repos-header .go-back :nth-child(1) {
+      color: #393939; }
   @media screen and (max-width: 767px) {
     .repos-header {
       padding: 0.5em;
+      padding-bottom: 3em;
       flex-direction: column; }
       .repos-header div {
         flex-direction: column; }
@@ -64,7 +75,9 @@ header {
   @media screen and (min-width: 650px) and (max-width: 1075px) {
     .user-card-container {
       align-items: flex-start;
-      flex-direction: column; } }
+      flex-direction: column; }
+      .user-card-container div {
+        margin: 1.5em 0em 1.5em 0em; } }
   @media screen and (min-width: 650px) and (max-width: 1523px) {
     .user-card-container {
       margin: 1em;
@@ -125,6 +138,11 @@ h3 {
   font-weight: normal;
   margin: 0.5em; }
 
+.error-text {
+  color: red;
+  text-align: center;
+  font-size: 1.4em; }
+
 .button {
   cursor: pointer;
   margin: 0.4em;
@@ -184,7 +202,7 @@ h3 {
     margin: 0.2em;
     background-color: white;
     border-radius: 10%;
-    border: 0.2em solid #8094f8;
+    border: 0.1em solid #8094f8;
     box-shadow: 0em 0.5em 0.4em rgba(0, 0, 0, 0.178);
     cursor: pointer; }
   .page-numbers li:hover {
