--- a/src/sass/headers.scss
+++ b/src/sass/headers.scss
@@ -7,14 +7,14 @@ header {
   padding: 3em;
   box-shadow: 0em 0.4em 0.4em rgba(0, 0, 0, 0.178);
   background: #feffff;
-  background: -moz-linear-gradient(top, #feffff 0%, #d2ebf9 100%);
-  background: -webkit-linear-gradient(top, #feffff 0%, #d2ebf9 100%);
-  background: linear-gradient(to bottom, #feffff 0%, #d2ebf9 100%);
+  background: -moz-linear-gradient(top, #feffff 0%, #ece8fc 100%);
+  background: -webkit-linear-gradient(top, #feffff 0%, #ece8fc 100%);
+  background: linear-gradient(to bottom, #feffff 0%, #ece8fc 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(
       startColorstr="#feffff",
       endColorstr="#d2ebf9",
       GradientType=0
-    ); /* IE6-9 */
+    );
   .searchbox {
     display: flex;
     justify-content: center;
