--- a/src/sass/cards.scss
+++ b/src/sass/cards.scss
@@ -1,5 +1,7 @@
 @import "./colors.scss";
-.user-card-container {
+@import "./breakpoints";
+.user-card-container,
+.repo-card-container {
   border-bottom: 0.06em solid $lightGray;
   padding: 3em;
   display: flex;
@@ -13,37 +15,37 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      a {
-        text-decoration: none;
-      }
     }
   }
+}
+.user-card-container {
   img {
     width: 10em;
     height: 10em;
     border-radius: 100%;
     margin-right: 2em;
     box-shadow: 0em 1em 0.4em rgba(0, 0, 0, 0.178);
+    -webkit-box-shadow: 0em 1em 0.4em rgba(0, 0, 0, 0.178);
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: $mobile-s) {
     img {
       display: none;
     }
   }
-  @media screen and (min-width: 650px) and (max-width: 1075px) {
+  @media screen and (min-width: $mobile) and (max-width: 1075px) {
     align-items: flex-start;
     flex-direction: column;
     div {
       margin: 1.5em 0em 1.5em 0em;
     }
   }
-  @media screen and (min-width: 650px) and (max-width: 1523px) {
+  @media screen and (min-width: $mobile) and (max-width: 1523px) {
     margin: 1em;
     width: 40%;
     border: 0.06em solid $lightGray;
   }
 
-  @media screen and (min-width: 1524px) {
+  @media screen and (min-width: $laptop-l) {
     margin: 1em;
     width: 25%;
     border: 0.06em solid $lightGray;
@@ -51,43 +53,25 @@
 }
 
 .repo-card-container {
-  border-bottom: 0.06em solid $lightGray;
-  padding: 3em;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  @media screen and (min-width: 1024px) {
+  @media screen and (min-width: $tablet) {
     border-left: 0.06em solid $lightGray;
   }
 
-  div {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    .desc {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      a {
-        text-decoration: none;
-      }
+  .details {
+    margin: 1em 0em 1em 0em;
+    span {
+      margin-left: 1.5em;
+      margin-right: 1em;
+      width: 1em;
+      height: 1em;
+      border-radius: 100%;
+      background-color: $gray;
     }
-    .details {
-      margin: 1em 0em 1em 0em;
-      span {
-        margin-left: 1.5em;
-        margin-right: 1em;
-        width: 1em;
-        height: 1em;
-        border-radius: 100%;
-        background-color: $gray;
-      }
-      :nth-child(3) {
-        background-color: rgb(201, 170, 34);
-      }
-      :nth-child(5) {
-        background-color: rgb(48, 59, 223);
-      }
+    :nth-child(3) {
+      background-color: rgb(201, 170, 34);
+    }
+    :nth-child(5) {
+      background-color: rgb(48, 59, 223);
     }
   }
 }
