--- a/src/sass/pagination.scss
+++ b/src/sass/pagination.scss
@@ -18,6 +18,7 @@
     border-radius: 10%;
     border: 0.1em solid $coolBlue;
     box-shadow: 0em 0.5em 0.4em rgba(0, 0, 0, 0.178);
+    -webkit-box-shadow: 0em 1em 0.4em rgba(0, 0, 0, 0.178);
     cursor: pointer;
   }
   li:hover {
