--- a/src/sass/preloaders.scss
+++ b/src/sass/preloaders.scss
@@ -1,5 +1,5 @@
 @import "./colors.scss";
-
+@import "./breakpoints.scss";
 .user-card-container-preloader {
   border-bottom: 0.06em solid $lightGray;
   padding: 3em;
@@ -19,14 +19,15 @@
     border-radius: 100%;
     margin-right: 2em;
     box-shadow: 0em 1em 0.4em rgba(0, 0, 0, 0.178);
+    -webkit-box-shadow: 0em 1em 0.4em rgba(0, 0, 0, 0.178);
   }
-  @media screen and (min-width: 650px) and (max-width: 1523px) {
+  @media screen and (min-width: $mobile) and (max-width: 1523px) {
     margin: 1em;
     width: 40%;
     border: 0.06em solid $lightGray;
   }
 
-  @media screen and (min-width: 1524px) {
+  @media screen and (min-width: $laptop-l) {
     margin: 1em;
     width: 25%;
     border: 0.06em solid $lightGray;
