--- a/public/main.css
+++ b/public/main.css
@@ -6,11 +6,10 @@ header {
   padding: 3em;
   box-shadow: 0em 0.4em 0.4em rgba(0, 0, 0, 0.178);
   background: #feffff;
-  background: -moz-linear-gradient(top, #feffff 0%, #d2ebf9 100%);
-  background: -webkit-linear-gradient(top, #feffff 0%, #d2ebf9 100%);
-  background: linear-gradient(to bottom, #feffff 0%, #d2ebf9 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#feffff", endColorstr="#d2ebf9", GradientType=0 );
-  /* IE6-9 */ }
+  background: -moz-linear-gradient(top, #feffff 0%, #ece8fc 100%);
+  background: -webkit-linear-gradient(top, #feffff 0%, #ece8fc 100%);
+  background: linear-gradient(to bottom, #feffff 0%, #ece8fc 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#feffff", endColorstr="#d2ebf9", GradientType=0 ); }
   header .searchbox {
     display: flex;
     justify-content: center;
@@ -47,80 +46,72 @@ header {
       .repos-header a {
         align-self: flex-start; } }
 
-.user-card-container {
-  border-bottom: 0.06em solid #c7c7c7;
-  padding: 3em;
-  display: flex;
-  justify-content: space-between;
-  align-items: center; }
-  .user-card-container div {
-    display: flex;
-    align-items: center;
-    justify-content: space-between; }
-    .user-card-container div .desc {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start; }
-      .user-card-container div .desc a {
-        text-decoration: none; }
-  .user-card-container img {
-    width: 10em;
-    height: 10em;
-    border-radius: 100%;
-    margin-right: 2em;
-    box-shadow: 0em 1em 0.4em rgba(0, 0, 0, 0.178); }
-  @media screen and (max-width: 400px) {
-    .user-card-container img {
-      display: none; } }
-  @media screen and (min-width: 650px) and (max-width: 1075px) {
-    .user-card-container {
-      align-items: flex-start;
-      flex-direction: column; }
-      .user-card-container div {
-        margin: 1.5em 0em 1.5em 0em; } }
-  @media screen and (min-width: 650px) and (max-width: 1523px) {
-    .user-card-container {
-      margin: 1em;
-      width: 40%;
-      border: 0.06em solid #c7c7c7; } }
-  @media screen and (min-width: 1524px) {
-    .user-card-container {
-      margin: 1em;
-      width: 25%;
-      border: 0.06em solid #c7c7c7; } }
-
+.user-card-container,
 .repo-card-container {
   border-bottom: 0.06em solid #c7c7c7;
   padding: 3em;
   display: flex;
   justify-content: space-between;
   align-items: center; }
-  @media screen and (min-width: 1024px) {
-    .repo-card-container {
-      border-left: 0.06em solid #c7c7c7; } }
+  .user-card-container div,
   .repo-card-container div {
     display: flex;
     align-items: center;
     justify-content: space-between; }
+    .user-card-container div .desc,
     .repo-card-container div .desc {
       display: flex;
       flex-direction: column;
       align-items: flex-start; }
-      .repo-card-container div .desc a {
-        text-decoration: none; }
-    .repo-card-container div .details {
-      margin: 1em 0em 1em 0em; }
-      .repo-card-container div .details span {
-        margin-left: 1.5em;
-        margin-right: 1em;
-        width: 1em;
-        height: 1em;
-        border-radius: 100%;
-        background-color: #9b9b9b; }
-      .repo-card-container div .details :nth-child(3) {
-        background-color: #c9aa22; }
-      .repo-card-container div .details :nth-child(5) {
-        background-color: #303bdf; }
+
+.user-card-container img {
+  width: 10em;
+  height: 10em;
+  border-radius: 100%;
+  margin-right: 2em;
+  box-shadow: 0em 1em 0.4em rgba(0, 0, 0, 0.178);
+  -webkit-box-shadow: 0em 1em 0.4em rgba(0, 0, 0, 0.178); }
+
+@media screen and (max-width: 400px) {
+  .user-card-container img {
+    display: none; } }
+
+@media screen and (min-width: 650px) and (max-width: 1075px) {
+  .user-card-container {
+    align-items: flex-start;
+    flex-direction: column; }
+    .user-card-container div {
+      margin: 1.5em 0em 1.5em 0em; } }
+
+@media screen and (min-width: 650px) and (max-width: 1523px) {
+  .user-card-container {
+    margin: 1em;
+    width: 40%;
+    border: 0.06em solid #c7c7c7; } }
+
+@media screen and (min-width: 1524px) {
+  .user-card-container {
+    margin: 1em;
+    width: 25%;
+    border: 0.06em solid #c7c7c7; } }
+
+@media screen and (min-width: 1024px) {
+  .repo-card-container {
+    border-left: 0.06em solid #c7c7c7; } }
+
+.repo-card-container .details {
+  margin: 1em 0em 1em 0em; }
+  .repo-card-container .details span {
+    margin-left: 1.5em;
+    margin-right: 1em;
+    width: 1em;
+    height: 1em;
+    border-radius: 100%;
+    background-color: #9b9b9b; }
+  .repo-card-container .details :nth-child(3) {
+    background-color: #c9aa22; }
+  .repo-card-container .details :nth-child(5) {
+    background-color: #303bdf; }
 
 h1 {
   color: #393939;
@@ -204,6 +195,7 @@ h3 {
     border-radius: 10%;
     border: 0.1em solid #8094f8;
     box-shadow: 0em 0.5em 0.4em rgba(0, 0, 0, 0.178);
+    -webkit-box-shadow: 0em 1em 0.4em rgba(0, 0, 0, 0.178);
     cursor: pointer; }
   .page-numbers li:hover {
     background-color: #8094f8;
@@ -227,7 +219,8 @@ h3 {
     height: 50px;
     border-radius: 100%;
     margin-right: 2em;
-    box-shadow: 0em 1em 0.4em rgba(0, 0, 0, 0.178); }
+    box-shadow: 0em 1em 0.4em rgba(0, 0, 0, 0.178);
+    -webkit-box-shadow: 0em 1em 0.4em rgba(0, 0, 0, 0.178); }
   @media screen and (min-width: 650px) and (max-width: 1523px) {
     .user-card-container-preloader {
       margin: 1em;
@@ -254,38 +247,32 @@ body {
   body a {
     text-decoration: none; }
 
-.container {
+.container,
+.informer,
+.users-list-page,
+.user-repos-page {
   display: flex;
   flex-direction: column;
   justify-content: center; }
 
 .informer {
-  display: flex;
-  flex-direction: column;
   align-items: center;
   width: 100%;
-  justify-content: center;
   margin-top: 15em; }
 
-.users-list-page {
-  display: flex;
-  flex-direction: column;
-  justify-content: center; }
-  @media screen and (min-width: 650px) and (max-width: 1023px) {
-    .users-list-page {
-      align-items: center;
-      flex-direction: row;
-      flex-flow: row wrap; } }
-  @media screen and (min-width: 1024px) {
-    .users-list-page {
-      align-items: center;
-      flex-direction: row;
-      flex-flow: row wrap; } }
+@media screen and (min-width: 650px) and (max-width: 1023px) {
+  .users-list-page {
+    align-items: center;
+    flex-direction: row;
+    flex-flow: row wrap; } }
+
+@media screen and (min-width: 1024px) {
+  .users-list-page {
+    align-items: center;
+    flex-direction: row;
+    flex-flow: row wrap; } }
 
 .user-repos-page {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center; }
   .user-repos-page .wrapper {
     width: 100%; }
